# test_task

./: CMakeLists.txt  README.md
include/: circle.h  rectangle.h  shape.h  triangle.h
src/: circle.cpp  rectangle.cpp  shape.cpp  triangle.cpp
tests/: CMakeLists.txt  test.cpp
